@@ -23,7 +23,6 @@ import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Captures the properties required for configuring the internal topics we create for changelogs and repartitioning etc.
@@ -57,12 +56,11 @@ public record ConfiguredInternalTopic(String name,
             .setPartitions(numberOfPartitions)
             .setReplicationFactor(replicationFactor.orElse((short) 0))
             .setTopicConfigs(
-                topicConfigs != null ?
-                    topicConfigs.entrySet().stream().map(
-                        y -> new StreamsGroupDescribeResponseData.KeyValue()
-                            .setKey(y.getKey())
-                            .setValue(y.getValue())
-                    ).collect(Collectors.toList()) : null
+                topicConfigs.entrySet().stream().map(
+                    y -> new StreamsGroupDescribeResponseData.KeyValue()
+                        .setKey(y.getKey())
+                        .setValue(y.getValue())
+                ).toList()
             );
     }
 
