@@ -27,6 +27,7 @@ import org.apache.kafka.server.share.session.ShareSession;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashMap;
+import java.util.List;
 
 /**
  * The context for every share fetch request. The context is responsible for tracking the topic partitions present in
@@ -50,7 +51,7 @@ public abstract class ShareFetchContext {
      */
     public ShareFetchResponse throttleResponse(int throttleTimeMs) {
         return new ShareFetchResponse(ShareFetchResponse.toMessage(Errors.NONE, throttleTimeMs,
-                Collections.emptyIterator(), Collections.emptyList()));
+                Collections.emptyIterator(), List.of()));
     }
 
     /**
